index.html - code cleaning

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,29 +11,29 @@
 	
 </head>
 <body>
-	<article>
+	<main>
 		<div id="product-img"></div>
 		<div id="product-desc">
-			<section id="item-type">
+			<div id="item-type">
 				<p>PERFUME</p>
-			</section>
-			<section id="item-name">
+			</div>
+			<div id="item-name">
 				Gabrielle Essence Eau De Parfum
-			</section>
-			<section id="item-desc">
+			</div>
+			<div id="item-desc">
 				<p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. </p>
-			</section>
-			<section id="item-price">
+			</div>
+			<div id="item-price">
 				<div id="new-price">$149.99</div>
 				<div id="old-price">$169.99</div>
-			</section>
+			</div>
 			<a href="#">
-			<section id="item-button">
+			<div id="item-button">
 				<div id="button-icon"><img src ="images/icon-cart.svg" alt=""/></div>
 				<div id="button-text">Add to Cart</div>
-			</section>
+			</div>
 			</a>
 		</div>
-	</article>
+	</main>
 </body>
 </html>
