desktop version - cleaning code

--- a/index.html
+++ b/index.html
@@ -15,24 +15,22 @@
 		<div id="product-img"></div>
 		<div id="product-desc">
 			<div id="item-type">
-				<p>PERFUME</p>
+				<p class="topText">PERFUME</p>
 			</div>
 			<div id="item-name">
-				Gabrielle Essence Eau De Parfum
+				<h1>Gabrielle Essence Eau De Parfum</h1>
 			</div>
 			<div id="item-desc">
-				<p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. </p>
+				<p class="descriptionText">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. </p>
 			</div>
 			<div id="item-price">
 				<div id="new-price">$149.99</div>
 				<div id="old-price">$169.99</div>
 			</div>
-			<a href="#">
 			<div id="item-button">
 				<div id="button-icon"><img src ="images/icon-cart.svg" alt=""/></div>
 				<div id="button-text">Add to Cart</div>
 			</div>
-			</a>
 		</div>
 	</main>
 </body>
