mobile version - cleaning code

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<div id="product-img"></div>
 		<div id="product-desc">
 			<div id="item-type">
-				<p class="topText">PERFUME</p>
+				<p>PERFUME</p>
 			</div>
 			<div id="item-name">
 				<h1>Gabrielle Essence Eau De Parfum</h1>
 			</div>
 			<div id="item-desc">
-				<p class="descriptionText">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. </p>
+				<p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. </p>
 			</div>
 			<div id="item-price">
 				<div id="new-price">$149.99</div>
