--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div id="old-price">$169.99</div>
 			</div>
 			<div id="item-button">
-				<div id="button-icon"><img src ="images/icon-cart.svg" alt=""/></div>
+				<div id="button-icon"></div>
 				<div id="button-text">Add to Cart</div>
 			</div>
 		</div>
