readme updated, button improved

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 				<div id="new-price">$149.99</div>
 				<div id="old-price">$169.99</div>
 			</div>
-			<div id="item-button">
+			<button id="item-button" aria-label="Add to cart">
 				<div id="button-icon"></div>
 				<div id="button-text">Add to Cart</div>
-			</div>
+			</button>
 		</div>
 	</main>
 </body>
